wip: Using Java 17
Also, now uses libdmtx Java wrapper for decoding.